From d1d2465 (closure-adv):
==========================

In prisim/closure.py,

(*) Add function loadnpz() along with docstring to read an input NPZ
file and return the loaded data
(*) In member function __init__() of class ClosurePhase, update the
loading of data through loadnpz() instead of through npz2hdf5()
(*) In member function smooth_in_tbins() of class ClosurePhase, check
for presence of certain 'prelim' under 'processed' before assigning
them.

From cd8ad7f (closure-adv):
==========================

In prisim/closure.py,

(*) In function npz2hdf5(), check for presence of files 'std_dev_triad',
'averaged_closures', and 'std_dev_lst' in the input NPZ file before
reading them and writing to the output HDF5 file.

From 65321a2 (closure-adv):
==========================

In prisim/closure.py,

(*) Remove function interpolate_eicp_spectrum() and related imports
as they has been moved to AstroUtils in mathops.py

From 8681f1b (closure-adv):
==========================

In prisim/closure.py,

(*) Add function interpolate_eicp_spectrum() along with docstring to
interpolate and fill missing values in complex exponential spectrum of
closure phases

In prisim/interferometry.py,

(*) Minor correction of typo in a docstring 

From cd59b25 (closure-adv):
==========================

In prisim/closure.py,

(*) In function npz2hdf5(), add inputs latitude and longitude. Update
docstring accordingly. Replace hard-coded latitude and longitude with
these inputs

From 4deafc2 (closure-adv):
==========================

In prisim/closure.py,

(*) In function npz2hdf5(), update LST parsing. Add key 'lst-day' to
HDF5 file

From a249439 (closure-adv):
==========================

In prisim/closure.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, add input keyword cohax to specify axes along
which coherent averaging of clousre phases can be performed. Update
member function docstring accordingly